<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Yojma TV</string>
    <string name="retry">Try Again</string>
    <string name="no_connection">No internet connection found.</string>
    <string name="check_connection_text">Check your connection.</string>
    <string name="change_password">Change Password</string>
    <string name="checkout">Disfruta de</string>
    <string name="by_email">By Email</string>
    <string name="by_line">By Line</string>
    <string name="cancelation_date">plan Expires: </string>
    <string name="email">Enter Email ID</string>
    <string name="password">Enter Your Password</string>
    <string name="guest_user">Guest User</string>
    <string name="guest_user1">Guest User</string>
    <string name="in_case_of_any">In case of any issues</string>
    <string name="subscribed_already">This user is already subscribed to this plan.</string>
    <string name="redeem_code_already_used">Redeem code is already used.</string>
    <string name="redeem_cancelled">Redeem code is cancelled. Please contact support.</string>
    <string name="redeem_code_invalid">Redeem code is invalid.</string>
    <string name="redeem_code_expired">Redeem code is expired</string>
    <string name="please_try">Please try again or contact support</string>
    <string name="cannot_find_any_subs">cannot find any subscription or subscription cannot contain price</string>
    <string name="on_enveu">en Yojma Tv!.Inicia tu prueba gratis hoy.</string>
    <string name="more_term_condition">Terms &amp; Conditions</string>
    <string name="full_name">Name</string>
    <string name="display_name">Enter your display Name</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="create_password">Create Password minimum 6 characters</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="mobile_error">Please enter a valid phone number and must starts with 66 or 0</string>
    <string name="address">Address</string>
    <string name="dob">Date of Birth</string>
    <string name="buy_for">Subscribe now for next</string>
    <string name="rent_for">Rent for</string>
    <string name="not_avail_for_Region">This feature is not available in your region</string>
    <string name="day_Rental">days</string>
    <string name="days">days</string>
    <string name="weeks">weeks</string>
    <string name="months">months</string>
    <string name="years">years</string>
    <string name="price">Price</string>
    <string name="offer_region_not_available">No offer available in your region!</string>
    <string name="no_valid_offer">No valid offers available for this content</string>
    <string name="no_Subscription_managment">No Subscription Management information present</string>
    <string name="signup">Sign Up</string>
    <string name="cannot_find_other_offer">cannot find any offer with this sku</string>
    <string name="not_find_any_offer">cannot find any valid offer</string>
    <string name="currency_not_supported">Currency not supported by this offer</string>
    <string name="payment_config_not_found">Payment configuration not found</string>
    <string name="login">Login</string>
    <string name="user_not_already_in_watchlist">This asset is not available in this user\'s watchlist</string>
    <string name="user_already_in_watchlist">This asset already exists in this user\'s watchlist​.</string>
    <string name="user_already_liked">This asset is already liked by the user​</string>
    <string name="user_already_not_liked">This asset is not liked by the user​</string>
    <string name="receipt_validation_url_not_avail">Receipt validation URL not available</string>
    <string name="payment_validation_failed">Payment Validation Failed</string>
    <string name="purchase_token_required">Purchase Token is required under notes</string>
    <string name="payment_id_not_found">Payment with this id Not found</string>
    <string name="payment_provider_not_Supported">This payment provider is not supported by this project</string>
    <string name="no_config_found">No config found for this payment provider</string>
    <string name="order_not_found">Order not found</string>
    <string name="order_completed_or_failed">This order has already been completed or failed. Please create a new order</string>
    <string name="sign_in_with_enveu">Sign in</string>
    <string name="facebook">Facebook</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_up_with_facebook">Sign up with Facebook</string>
    <string name="google">Google +</string>
    <string name="register">Register</string>
    <string name="sign_in"><b><u>Sign In</u></b></string>
    <string name="or_login_with">Or Login with</string>
    <string name="or">Or</string>
    <string name="or_caps">- OR -</string>
    <string name="skip">Skip</string>
    <string name="skip_line"><u>Skip</u></string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_u">Forgot Password</string>
    <string name="email_id">Email for FB Login </string>
    <string name="feature">Feature</string>
    <string name="features">Features</string>
    <string name="watchlist_empty_message">Keep track of Movies, TV shows and clips you want to watch</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="title_more">MORE</string>
    <string name="listing_title_text"><b>Movie</b></string>
    <string name="title_trending">Trending</string>
    <string name="email_address">Email Address</string>
    <string name="send_email">Send Email</string>
    <string name="save">Save</string>
    <string name="new_password">New Password</string>
    <string name="noti_title">Notifications</string>
    <string name="notification_setting">Notification Setting</string>
    <string name="binge_setting">Binge Watch</string>
    <string name="invalid_email_id">Invalid email id</string>
    <string name="manage_account">Manage Subscription</string>
    <string name="login_signup_">Log In / Sign Up</string>
    <string name="login_txt">Login</string>
    <string name="profile_update_btn">Update</string>
    <string name="verify_user">Verify Account</string>
    <string name="connct_facebbook">Connect with Facebook</string>
    <string name="detail_title">Enter your registered email address below and we will send you instructions on resetting your password.</string>
    <string name="already_have_account_sign">Already have an account</string>
    <string name="description_auto">ปรับความคมชัดตามความเร็วอินเทอร์เน็ต</string>
    <string name="description_sd">ความคมชัดปกติ</string>
    <string name="description_hd">ความคมชัดสูง</string>
    <string name="description_full_hd">ความคมชัดสูงสุด</string>
    <string name="cancel">Cancel</string>
    <string name="later">Later</string>
    <string name="no_internet">No internet connection found.</string>
    <string name="no_internet_connection">No internet connection found.\nCheck your connection.</string>
    <string name="my_profile">My Profile</string>
    <string name="edit_profile">Edit profile</string>
    <string name="more_gaming">Gaming</string>
    <string name="logout_confirmation">Are you sure you want to logout?</string>
    <string name="password_length">Minimum 6 characters having atleast 1 number</string>
    <string name="valid_email">Invalid Email</string>
    <string name="empty_password">Please enter Password</string>
    <string name="empty_string">Please enter Email</string>
    <string name="credential_mismatch">Credentials Mismatch!</string>
    <string name="email_check_signup">Please enter Email</string>
    <string name="password_match">Password doesn\'t match</string>
    <string name="otp_limits">You have exceeded the limit of OTP request. Please contact support@doxzilla.com</string>
    <string name="empty_name">Please enter Name</string>
    <string name="name_validation_profile">Name is required</string>
    <string name="profile_update_successfully">Updated Successfully!</string>
    <string name="profile_registered_successfully">Registered Successfully!</string>
    <string name="forgot_password_response">Thanks for putting the request. If we find the email address in our system, we will send the reset link over the mail please enter new password</string>
    <string name="otp_is_invalid">OTP is invalid</string>
    <string name="user_with_this_email_id_does_not_exist">User with this email id does not exist</string>
    <string name="no_subscription_configuration_available">No Subscription Configuration available for this project. Please contact support</string>
    <string name="otp_has_been_expired">OTP has been expired</string>
    <string name="ok">OK</string>
    <string name="search">Search</string>
    <string name="verify_account">Verify Account</string>
    <string name="account_verification_link">Are you sure you want to verify your acccount?</string>
    <string name="submit">Submit</string>
    <string name="no_result_found">No results found</string>
    <string name="no_result_found_title">No Results Found</string>
    <string name="popular_search">Popular Searches</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="no_result">No results found</string>
    <string name="prime_memb_issue">Doxzilla Membership Issue</string>
    <string name="contactus_description">If you are prompted to subscribe, but have another account which is subscribed to Doxzilla, please log in using that account.</string>
    <string name="contactus_second_desc">Still need help? How would you like to contact us?</string>
    <string name="subscribe">Subscribe</string>
    <string name="home">Home</string>
    <string name="live">Live</string>
    <string name="sea_fishing">Sea Fishing</string>
    <string name="continental_fishing">Continental Fishing</string>
    <string name="detail_page_my_list">My List</string>
    <string name="expeditions">Join us</string>
    <string name="more_account">Account</string>
    <string name="more_settings">Settings</string>
    <string name="premium_title">Premium</string>
    <string name="euro_74_99_text">Euro 74,99€</string>
    <string name="annually_title">ANNUALLY</string>
    <string name="date_of_purchase_02_jul_2021_text">Date of Purchase : </string>
    <string name="all_iberalia_originals_or_exclusive_contents_text">The best content that inspires you and improves your life</string>
    <string name="status_title">Status</string>
    <string name="payment_mode_title">Payment Mode</string>
    <string name="auto_renewal_text">Auto Renewal</string>
    <string name="active_text">Active</string>
    <string name="apple_text">Apple</string>
    <string name="yes_text">Yes</string>
    <string name="cancel_subscription_button">Cancel Subscription</string>
    <string name="big_game_hunting">Big Game Hunting</string>
    <string name="small_game_hunting">Small Game Hunting</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="more_privacy_policy">Privacy Policy</string>
    <string name="faq_item">FAQ</string>
    <string name="help_center">Help Center</string>
    <string name="home_tabbar">Home</string>
    <string name="movie_tabbar">Movie</string>
    <string name="validity">Validity :</string>
    <string name="plan_date">02 jun 2020-02 jul 2021</string>
    <string name="subscription_date">date</string>
    <string name="order_history_payment_mode">Payment Mode :</string>
    <string name="order_history_payment_status">Payment Status :</string>
    <string name="order_history_order_Id">Order Id :</string>
    <string name="order_history_transaction_type">Transaction Type:</string>
    <string name="more_tabbar">More</string>
    <string name="kids_tabbar">Yojma Kids</string>
    <string name="series_tabbar">Series &amp; Docs</string>
</resources>