<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
 <group
    android:id="@+id/grp1"
     android:checkableBehavior="single">
     <item
         android:id="@+id/home"
         android:title="@string/home" />

     <item
         android:id="@+id/live"
         android:title="@string/live" />
     <item
         android:id="@+id/big_hunting"
         android:visible="false"
         android:title="@string/big_game_hunting" />
     <item
         android:id="@+id/small_hunting"
         android:visible="false"
         android:title="@string/small_game_hunting" />
     <item
         android:id="@+id/sea_fishing"
         android:visible="false"
         android:title="@string/sea_fishing" />
     <item
         android:id="@+id/continental_fishing"
         android:visible="false"
         android:title="@string/continental_fishing" />
     <item
         android:id="@+id/my_list"
         android:title="@string/detail_page_my_list" />
</group>

    <group android:id="@+id/grp2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/expeditions"
            android:title="@string/expeditions" />

    </group>
    <item
        android:id="@+id/subscribe"
        android:title="@string/subscribe" />
    <item
        android:id="@+id/account"
        android:title="@string/more_account" />
    <item
        android:id="@+id/Setting"
        android:title="@string/more_settings" />
    <item
        android:id="@+id/terms_condition"
        android:title="@string/terms_and_conditions" />
    <item
        android:id="@+id/privacy"
        android:title="@string/more_privacy_policy" />
    <item
        android:id="@+id/faq"
        android:title="@string/faq_item" />
    <item
        android:id="@+id/help_center"
        android:title="@string/help_center" />
</menu>