<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home_tabbar" />

    <item
        android:id="@+id/navigation_movie"
        android:icon="@drawable/ic_movie"
        android:title="@string/movie_tabbar" />

    <item
        android:id="@+id/navigation_series"
        android:icon="@drawable/ic_series"
        android:title="@string/series_tabbar" />

    <item
        android:id="@+id/navigation_Kids"
        android:icon="@drawable/ic_kids"
        android:title="@string/kids_tabbar" />


    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_more"
        android:title="@string/more_tabbar" />

</menu>
