<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="@dimen/sign_up_16dp"
            android:layout_marginBottom="@dimen/sign_up_padding_10dp"

            android:baselineAligned="false">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/signUp_5dp_margin"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView"
                            style="@style/TextView_Bold"
                            android:maxLines="1"
                            tools:text="mon" />

                        <TextView
                            android:id="@+id/activeExpired"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/toolbar_ios_width_10dp"
                            android:background="@drawable/badge_background"
                            android:backgroundTint="#1D682F"
                            android:textColor="@color/series_detail_now_playing_title_color"
                            android:textSize="@dimen/signUp_12dp_margin"
                            tools:text="@string/active_text" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/order_validity_id"
                        style="@style/TextView_Medium3"
                        android:layout_marginTop="@dimen/sign_up_padding_10dp"
                        android:gravity="center"
                        android:textAllCaps="true"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textView"
                        tools:text="@string/validity" />

                    <TextView
                        android:id="@+id/duration"
                        style="@style/TextView_Medium_payments"
                        android:layout_gravity="start"
                        android:layout_marginTop="@dimen/button_2dp"
                        android:singleLine="true"
                        tools:text="@string/plan_date" />

                    <TextView
                        android:id="@+id/order_payment_mode_id"
                        style="@style/TextView_Medium3"
                        android:layout_marginTop="@dimen/sign_up_padding_10dp"
                        tools:text="@string/order_history_payment_mode" />

                    <TextView
                        android:id="@+id/paymentMode"
                        style="@style/TextView_Medium"
                        android:layout_marginTop="2dp"
                        tools:text="@string/apple_text" />

                    <TextView
                        android:id="@+id/order_id"
                        style="@style/TextView_Medium3"
                        android:layout_marginTop="@dimen/sign_up_padding_10dp"
                        tools:text="@string/order_history_order_Id" />

                    <TextView
                        android:id="@+id/transactionId"
                        style="@style/TextView_Medium"
                        android:layout_marginTop="4dp"
                        tools:text="XEMhn16599579631" />


                </LinearLayout>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/signUp_5dp_margin"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/sign_up_padding_10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/packageName"
                        style="@style/TextView_Bold"
                        android:layout_marginStart="@dimen/bell_icon_width_20dp"
                        tools:text="@string/euro_74_99_text" />

                    <TextView
                        android:id="@+id/order_date_id"
                        style="@style/TextView_Medium3"
                        android:layout_marginTop="@dimen/sign_up_padding_10dp"
                        tools:text="@string/subscription_date" />

                    <TextView
                        android:id="@+id/order_dateEnd_id"
                        style="@style/TextView_Medium"
                        android:layout_marginTop="@dimen/button_2dp"
                        tools:text="02 jun 2021 " />

                    <TextView
                        android:id="@+id/order_payment_status_id"
                        style="@style/TextView_Medium3"
                        android:layout_marginTop="@dimen/sign_up_padding_10dp"
                        tools:text="@string/order_history_payment_status" />

                    <TextView
                        android:id="@+id/paymentStatus"
                        style="@style/TextView_Medium"
                        android:layout_marginTop="@dimen/button_2dp"
                        tools:text="Completed :" />

                    <TextView
                        android:id="@+id/order_transaction_type_id"
                        style="@style/TextView_Medium3"
                        android:layout_marginTop="@dimen/sign_up_padding_10dp"
                        tools:text="@string/order_history_transaction_type" />

                    <TextView
                        android:id="@+id/order_Purchase_id"
                        style="@style/TextView_Medium"
                        android:layout_marginTop="4dp"
                        tools:text="Purchase" />


                    <TextView
                        android:id="@+id/st"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/signUp_10dp_margin"
                        android:textColor="@color/unselected_indicator_color"
                        android:textSize="@dimen/signUp_14sp_text_size"
                        android:visibility="gone"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/paymentMode" />


                </LinearLayout>
            </RelativeLayout>


        </LinearLayout>
        <TextView
            android:id="@+id/expireOn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextView_Bold"
            android:textColor="@color/signup_terms_and_condition_text_color"
            android:textSize="@dimen/signUp_16sp_text_size"
            android:visibility="gone"
            android:layout_marginBottom="@dimen/sign_up_padding_10dp"
            app:layout_constraintEnd_toStartOf="@+id/transactionId"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activeExpired"
            tools:text="Expiring on  02 july 2022" />

    </LinearLayout>

</layout>